apps/production/client-sites/maria-fernanda-espana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maria-fernanda-espana
  namespace: lulo-demo-landings
  labels:
    app: maria-fernanda-espana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maria-fernanda-espana
  template:
    metadata:
      labels:
        app: maria-fernanda-espana
        name: maria-fernanda-espana
    spec:
      containers:
      - name: maria-fernanda-espana
        image: "registry.yesidlopez.de/maria-fernanda-espana:v1.0.1" # {"$imagepolicy": "lulo-demo-landings:maria-fernanda-espana"}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      imagePullSecrets:
        - name: registry-secret
