apps/production/client-sites/maria-fernanda-espana/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: maria-fernanda-espana
  name: maria-fernanda-espana
  namespace: lulo-demo-landings
spec:
  selector:
    app: maria-fernanda-espana
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
