apps/production/client-sites/maria-fernanda-espana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maria-fernanda-espana
  namespace: lulo-demo-landings
  annotations:
    cert-manager.io/cluster-issuer: luloai-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/target: homelab.luloai.com
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - maria-fernanda-espana.demo.luloai.com
      secretName: maria-fernanda-espana-tls
  rules:
    - host: maria-fernanda-espana.demo.luloai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maria-fernanda-espana
                port:
                  number: 3000
